objects/SMAX_PS_Fault_Code__c.object
<CustomObject>
    <description>Fault Codes for SMAX_PS_Fault_Codes</description>
    <label>Fault Code</label>
    <nameField>
        <label>Fault Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fault Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SMAX_PS_Code__c</fullName>
        <label>Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Code_Group__c</fullName>
        <label>Code Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Code_Family__c</fullName>
        <label>Code Family</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Fault_Action__c</fullName>
        <label>Fault Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advised~AC01</fullName>
                </value>
                <value>
                    <fullName>Adjusted~AC02</fullName>
                </value>
                <value>
                    <fullName>Aligned~AC03</fullName>
                </value>
                <value>
                    <fullName>Calibrated~AC04</fullName>
                </value>
                <value>
                    <fullName>Cleaned~AC05</fullName>
                </value>
                <value>
                    <fullName>Customer Action Req~AC06</fullName>
                </value>
                <value>
                    <fullName>Follow Up Required~AC07</fullName>
                </value>
                <value>
                    <fullName>Lubricated~AC08</fullName>
                </value>
                <value>
                    <fullName>Monitored~AC09</fullName>
                </value>
                <value>
                    <fullName>Rebuilt~AC10</fullName>
                </value>
                <value>
                    <fullName>Reconfigured~AC11</fullName>
                </value>
                <value>
                    <fullName>Referred to Specialist~AC12</fullName>
                </value>
                <value>
                    <fullName>Reload Software~AC13</fullName>
                </value>
                <value>
                    <fullName>Repaired Item~AC14</fullName>
                </value>
                <value>
                    <fullName>Replaced~AC15</fullName>
                </value>
                <value>
                    <fullName>Reseat / Reconnected~AC16</fullName>
                </value>
                <value>
                    <fullName>Reset Power~AC17</fullName>
                </value>
                <value>
                    <fullName>Resoldered~AC18</fullName>
                </value>
                <value>
                    <fullName>Routine Maintenance~AC19</fullName>
                </value>
                <value>
                    <fullName>SDB Modification~AC20</fullName>
                </value>
                <value>
                    <fullName>Tested~AC21</fullName>
                </value>
                <value>
                    <fullName>Tightened~AC22</fullName>
                </value>
                <value>
                    <fullName>Trained / Instructed~AC23</fullName>
                </value>
                <value>
                    <fullName>Updated to Latest Vers~AC24</fullName>
                </value>
                <value>
                    <fullName>Upgraded~AC25</fullName>
                </value>
                <value>
                    <fullName>Verified~AC26</fullName>
                </value>
                <value>
                    <fullName>Scheduled Event~AC27</fullName>
                </value>
                <value>
                    <fullName>Reprogrammed~AC28</fullName>
                </value>
                <value>
                    <fullName>Return to Vendor~AC30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_CodeGroupType__c</fullName>
        <formula>TEXT(SMAX_PS_Fault_Code_Group__r.SMAX_PS_Code_Group_Type__c)</formula>
        <label>Code Group Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Completion_Code__c</fullName>
        <description>Completion Codes</description>
        <label>Completion Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JC01 - Job Completed</fullName>
                </value>
                <value>
                    <fullName>JC02 - Additional Parts Required</fullName>
                </value>
                <value>
                    <fullName>JC03 - Confidence Testing</fullName>
                </value>
                <value>
                    <fullName>JC04 - Customer Action Required</fullName>
                </value>
                <value>
                    <fullName>JC05 - Defective Spare Parts</fullName>
                </value>
                <value>
                    <fullName>JC06 - Further Troubleshooting Required</fullName>
                </value>
                <value>
                    <fullName>JC07 - Insufficient Technical Information</fullName>
                </value>
                <value>
                    <fullName>JC08 - Insufficient Time to Complete</fullName>
                </value>
                <value>
                    <fullName>JC09 - Insufficient Training</fullName>
                </value>
                <value>
                    <fullName>JC10 - Intermittent Problem</fullName>
                </value>
                <value>
                    <fullName>JC12 - Parts Availability Delay</fullName>
                </value>
                <value>
                    <fullName>JC13 - Tools &amp; Jigs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Code_Description__c</fullName>
        <label>Code Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Fault_Code_Group__c</fullName>
        <label>Fault Code Group</label>
        <referenceTo>SMAX_PS_Fault_Code_Group__c</referenceTo>
        <relationshipLabel>Fault Codes</relationshipLabel>
        <relationshipName>Fault_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Installation_Code__c</fullName>
        <description>Installation Codes</description>
        <label>Installation Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN01 - Application Problems</fullName>
                </value>
                <value>
                    <fullName>IN02 - Computer problem PKI</fullName>
                </value>
                <value>
                    <fullName>IN03 - Customer site unready or problem</fullName>
                </value>
                <value>
                    <fullName>IN04 - Delivery Incomplete</fullName>
                </value>
                <value>
                    <fullName>IN05 - Installation with no problem</fullName>
                </value>
                <value>
                    <fullName>IN06 - Major Adjustment</fullName>
                </value>
                <value>
                    <fullName>IN07 - Major parts replacement</fullName>
                </value>
                <value>
                    <fullName>IN08 - Major repair carried out</fullName>
                </value>
                <value>
                    <fullName>IN09 - Minor installation problem-no follow up</fullName>
                </value>
                <value>
                    <fullName>IN10 - Sales Order Incorrect/Incomplete</fullName>
                </value>
                <value>
                    <fullName>IN11 - Shipping Damage</fullName>
                </value>
                <value>
                    <fullName>IN12 - Accessory Problem</fullName>
                </value>
                <value>
                    <fullName>IN13 - Software Issue PKI</fullName>
                </value>
                <value>
                    <fullName>IN14 - Software Issue non-PKI</fullName>
                </value>
                <value>
                    <fullName>IN15 - Computer problem non-PKI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Complaint_Required__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Complaint Required</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IsComplaintRequired__c</fullName>
        <formula>SMAX_PS_Complaint_Required__c = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Complaint Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Problem_Code_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the selection of this Fault Code requires a Problem Code to also be selected.</description>
        <inlineHelpText>Indicates whether the selection of this Fault Code requires a Problem Code to also be selected.</inlineHelpText>
        <label>Is Problem Code Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Code_Group_Description__c</fullName>
        <label>Code Group Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Fault_Code_Description__c</fullName>
        <label>Fault Code Description</label>
        <type>TextArea</type>
    </fields>
</CustomObject>